[bugfix] test for single precision

--- a/src/mobbrmsd/test/CMakeLists.txt
+++ b/src/mobbrmsd/test/CMakeLists.txt
@@ -83,6 +83,9 @@ function(DIMSPECTESTS post dimspec_dir real int)
     )
 endfunction(DIMSPECTESTS)
 
+add_subdirectory(2dsp)
 add_subdirectory(2ddp)
+add_subdirectory(3dsp)
 add_subdirectory(3ddp)
+add_subdirectory(gdsp)
 add_subdirectory(gddp)
