[bugfix] CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,8 +64,7 @@ endif()
   target_include_directories(${name} PRIVATE ${mobbrmsd_INCLUDE_DIR})
   if(blas)
     target_compile_options(${name} PRIVATE ${BLAS_LINKER_FLAGS})
-    target_link_libraries(${name} PRIVATE blas)
-    target_link_libraries(${name} PRIVATE lapack)
+    target_link_libraries(${name} PRIVATE ${BLAS_LIBRARIES})
   endif()
   if(openmp)
     target_compile_options(${name} PRIVATE ${OpenMP_Fortran_FLAGS})
