[update] CMakeLists.txt

--- a/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
@@ -2,7 +2,7 @@ set(LIB_MOD_3DDP_DIR ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}_3ddp/mod_files)
 if(NOT EXISTS "${LIB_MOD_3DDP_DIR}")
   make_directory("${LIB_MOD_3DDP_DIR}")
 endif()
-set(LIB_MOD_3DSP_DIR ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}_2dsp/mod_files)
+set(LIB_MOD_3DSP_DIR ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}_3dsp/mod_files)
 if(NOT EXISTS "${LIB_MOD_GDSP_DIR}")
   make_directory("${LIB_MOD_GDSP_DIR}")
 endif()
@@ -31,8 +31,14 @@ add_library(${PROJECT_NAME}_3ddp_shared SHARED ${sources})
 ADDOPTS(${PROJECT_NAME}_3ddp_shared 64 32 "" 1)
 add_library(${PROJECT_NAME}_3ddp_static STATIC ${sources})
 ADDOPTS(${PROJECT_NAME}_3ddp_static 64 32 "" 1)
+add_library(${PROJECT_NAME}_3dsp_shared SHARED ${sources})
+ADDOPTS(${PROJECT_NAME}_3dsp_shared 32 32 "" 1)
+add_library(${PROJECT_NAME}_3dsp_static STATIC ${sources})
+ADDOPTS(${PROJECT_NAME}_3dsp_static 32 32 "" 1)
 set_target_properties(${PROJECT_NAME}_3ddp_shared PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_3DDP_DIR})
 set_target_properties(${PROJECT_NAME}_3ddp_static PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_3DDP_DIR})
+set_target_properties(${PROJECT_NAME}_3dsp_shared PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_3DSP_DIR})
+set_target_properties(${PROJECT_NAME}_3dsp_static PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_3DSP_DIR})
 install(
   TARGETS ${PROJECT_NAME}_3ddp_shared
   EXPORT ${PROJECT_NAME}-export
@@ -46,9 +52,27 @@ install(
   LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_3ddp/lib"
   )
 install(
+  TARGETS ${PROJECT_NAME}_3dsp_shared
+  EXPORT ${PROJECT_NAME}-export
+  ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_3dsp/lib"
+  LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_3dsp/lib"
+  )
+install(
+  TARGETS ${PROJECT_NAME}_3dsp_static
+  EXPORT ${PROJECT_NAME}-export
+  ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_3dsp/lib"
+  LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_3dsp/lib"
+  )
+install(
   EXPORT ${PROJECT_NAME}-export
   NAMESPACE ${PROJECT_NAME}_3ddp::
   DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_3ddp")
+install(
+  EXPORT ${PROJECT_NAME}-export
+  NAMESPACE ${PROJECT_NAME}_3dsp::
+  DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_3dsp")
 install(DIRECTORY ${LIB_MOD_3DDP_DIR}
         DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_3ddp")
+install(DIRECTORY ${LIB_MOD_3DSP_DIR}
+        DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_3dsp")
 
