--- a/src/mobbrmsd/CMakeLists.txt
+++ b/src/mobbrmsd/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(mobbrmsd_2d)
 add_subdirectory(mobbrmsd_3d)
-add_subdirectory(mobbrmsd)
+add_subdirectory(mobbrmsd_gd)
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
   add_subdirectory(test)
 endif()
