--- a/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
@@ -3,8 +3,8 @@ if(NOT EXISTS "${LIB_MOD_2DDP_DIR}")
   make_directory("${LIB_MOD_2DDP_DIR}")
 endif()
 set(LIB_MOD_2DSP_DIR ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}_2dsp/mod_files)
-if(NOT EXISTS "${LIB_MOD_GDSP_DIR}")
-  make_directory("${LIB_MOD_GDSP_DIR}")
+if(NOT EXISTS "${LIB_MOD_2DSP_DIR}")
+  make_directory("${LIB_MOD_2DSP_DIR}")
 endif()
 
 list(APPEND sources
@@ -31,8 +31,14 @@ add_library(${PROJECT_NAME}_2ddp_shared SHARED ${sources})
 ADDOPTS(${PROJECT_NAME}_2ddp_shared 64 32 "" 1)
 add_library(${PROJECT_NAME}_2ddp_static STATIC ${sources})
 ADDOPTS(${PROJECT_NAME}_2ddp_static 64 32 "" 1)
+add_library(${PROJECT_NAME}_2dsp_shared SHARED ${sources})
+ADDOPTS(${PROJECT_NAME}_2dsp_shared 32 32 "" 1)
+add_library(${PROJECT_NAME}_2dsp_static STATIC ${sources})
+ADDOPTS(${PROJECT_NAME}_2dsp_static 32 32 "" 1)
 set_target_properties(${PROJECT_NAME}_2ddp_shared PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_2DDP_DIR})
 set_target_properties(${PROJECT_NAME}_2ddp_static PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_2DDP_DIR})
+set_target_properties(${PROJECT_NAME}_2dsp_shared PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_2DSP_DIR})
+set_target_properties(${PROJECT_NAME}_2dsp_static PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_2DSP_DIR})
 install(
   TARGETS ${PROJECT_NAME}_2ddp_shared
   EXPORT ${PROJECT_NAME}-export
@@ -46,9 +52,28 @@ install(
   LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_2ddp/lib"
   )
 install(
+  TARGETS ${PROJECT_NAME}_2dsp_shared
+  EXPORT ${PROJECT_NAME}-export
+  ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_2dsp/lib"
+  LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_2dsp/lib"
+  )
+install(
+  TARGETS ${PROJECT_NAME}_2dsp_static
+  EXPORT ${PROJECT_NAME}-export
+  ARCHIVE DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_2dsp/lib"
+  LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_2dsp/lib"
+  )
+install(
   EXPORT ${PROJECT_NAME}-export
   NAMESPACE ${PROJECT_NAME}_2ddp::
   DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_2ddp")
 install(DIRECTORY ${LIB_MOD_2DDP_DIR}
         DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_2ddp")
+
+install(
+  EXPORT ${PROJECT_NAME}-export
+  NAMESPACE ${PROJECT_NAME}_2dsp::
+  DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_2dsp")
+install(DIRECTORY ${LIB_MOD_2DSP_DIR}
+        DESTINATION "${CMAKE_INSTALL_PREFIX}/cmake/${PROJECT_NAME}_2dsp")
 
