--- a/src/mobbrmsd/mobbrmsd_gd/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_gd/CMakeLists.txt
@@ -28,13 +28,17 @@ list(APPEND sources
   )
 
 add_library(${PROJECT_NAME}_gddp_shared SHARED ${sources})
-ADDOPTS(${PROJECT_NAME}_gddp_shared 64 32 1 1)
 add_library(${PROJECT_NAME}_gddp_static STATIC ${sources})
-ADDOPTS(${PROJECT_NAME}_gddp_static 64 32 1 1)
 add_library(${PROJECT_NAME}_gdsp_shared SHARED ${sources})
-ADDOPTS(${PROJECT_NAME}_gdsp_shared 32 32 1 1)
 add_library(${PROJECT_NAME}_gdsp_static STATIC ${sources})
+ADDOPTS(${PROJECT_NAME}_gddp_shared 64 32 1 1)
+ADDOPTS(${PROJECT_NAME}_gddp_static 64 32 1 1)
+ADDOPTS(${PROJECT_NAME}_gdsp_shared 32 32 1 1)
 ADDOPTS(${PROJECT_NAME}_gdsp_static 32 32 1 1)
+set_target_properties(${PROJECT_NAME}_gddp_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_gddp)
+set_target_properties(${PROJECT_NAME}_gddp_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_gddp)
+set_target_properties(${PROJECT_NAME}_gdsp_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_gdsp)
+set_target_properties(${PROJECT_NAME}_gdsp_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_gdsp)
 set_target_properties(${PROJECT_NAME}_gddp_shared PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_GDDP_DIR})
 set_target_properties(${PROJECT_NAME}_gddp_static PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_GDDP_DIR})
 set_target_properties(${PROJECT_NAME}_gdsp_shared PROPERTIES Fortran_MODULE_DIRECTORY ${LIB_MOD_GDSP_DIR})
