[add] test_invsqrt.f90

--- a/src/mobbrmsd/test/sp/CMakeLists.txt
+++ b/src/mobbrmsd/test/sp/CMakeLists.txt
@@ -1,3 +1,8 @@
+ADDTEST(test_invsqrt_sp 32 32 "" "" ""
+  ${CMAKE_CURRENT_SOURCE_DIR}/../../mod_kinds.f90
+  ${CMAKE_CURRENT_SOURCE_DIR}/../../mod_params.f90
+  ${CMAKE_CURRENT_SOURCE_DIR}/../test_invsqrt.f90
+  )
 ADDTEST(test_invcbrt_sp 32 32 "" "" ""
   ${CMAKE_CURRENT_SOURCE_DIR}/../../mod_kinds.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../../mod_params.f90
