--- a/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_2d/CMakeLists.txt
@@ -31,10 +31,10 @@ add_library(${PROJECT_NAME}_2ddp_shared SHARED ${sources})
 add_library(${PROJECT_NAME}_2ddp_static STATIC ${sources})
 add_library(${PROJECT_NAME}_2dsp_shared SHARED ${sources})
 add_library(${PROJECT_NAME}_2dsp_static STATIC ${sources})
-ADDOPTS(${PROJECT_NAME}_2ddp_shared 64 32 "" 1)
-ADDOPTS(${PROJECT_NAME}_2ddp_static 64 32 "" 1)
-ADDOPTS(${PROJECT_NAME}_2dsp_shared 32 32 "" 1)
-ADDOPTS(${PROJECT_NAME}_2dsp_static 32 32 "" 1)
+ADDOPTS(${PROJECT_NAME}_2ddp_shared 2 64 32 "" 1)
+ADDOPTS(${PROJECT_NAME}_2ddp_static 2 64 32 "" 1)
+ADDOPTS(${PROJECT_NAME}_2dsp_shared 2 32 32 "" 1)
+ADDOPTS(${PROJECT_NAME}_2dsp_static 2 32 32 "" 1)
 set_target_properties(${PROJECT_NAME}_2ddp_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_2ddp)
 set_target_properties(${PROJECT_NAME}_2ddp_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_2ddp)
 set_target_properties(${PROJECT_NAME}_2dsp_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_2dsp)
