--- a/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_3d/CMakeLists.txt
@@ -31,10 +31,10 @@ add_library(${PROJECT_NAME}_3ddp_shared SHARED ${sources})
 add_library(${PROJECT_NAME}_3ddp_static STATIC ${sources})
 add_library(${PROJECT_NAME}_3dsp_shared SHARED ${sources})
 add_library(${PROJECT_NAME}_3dsp_static STATIC ${sources})
-ADDOPTS(${PROJECT_NAME}_3ddp_shared 64 32 "" 1)
-ADDOPTS(${PROJECT_NAME}_3ddp_static 64 32 "" 1)
-ADDOPTS(${PROJECT_NAME}_3dsp_shared 32 32 "" 1)
-ADDOPTS(${PROJECT_NAME}_3dsp_static 32 32 "" 1)
+ADDOPTS(${PROJECT_NAME}_3ddp_shared 3 64 32 "" 1)
+ADDOPTS(${PROJECT_NAME}_3ddp_static 3 64 32 "" 1)
+ADDOPTS(${PROJECT_NAME}_3dsp_shared 3 32 32 "" 1)
+ADDOPTS(${PROJECT_NAME}_3dsp_static 3 32 32 "" 1)
 set_target_properties(${PROJECT_NAME}_3ddp_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_3ddp)
 set_target_properties(${PROJECT_NAME}_3ddp_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_3ddp)
 set_target_properties(${PROJECT_NAME}_3dsp_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_3dsp)
