--- a/src/mobbrmsd/mobbrmsd_gd/CMakeLists.txt
+++ b/src/mobbrmsd/mobbrmsd_gd/CMakeLists.txt
@@ -31,10 +31,10 @@ add_library(${PROJECT_NAME}_gddp_shared SHARED ${sources})
 add_library(${PROJECT_NAME}_gddp_static STATIC ${sources})
 add_library(${PROJECT_NAME}_gdsp_shared SHARED ${sources})
 add_library(${PROJECT_NAME}_gdsp_static STATIC ${sources})
-ADDOPTS(${PROJECT_NAME}_gddp_shared 64 32 1 1)
-ADDOPTS(${PROJECT_NAME}_gddp_static 64 32 1 1)
-ADDOPTS(${PROJECT_NAME}_gdsp_shared 32 32 1 1)
-ADDOPTS(${PROJECT_NAME}_gdsp_static 32 32 1 1)
+ADDOPTS(${PROJECT_NAME}_gddp_shared X 64 32 1 1)
+ADDOPTS(${PROJECT_NAME}_gddp_static X 64 32 1 1)
+ADDOPTS(${PROJECT_NAME}_gdsp_shared X 32 32 1 1)
+ADDOPTS(${PROJECT_NAME}_gdsp_static X 32 32 1 1)
 set_target_properties(${PROJECT_NAME}_gddp_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_gddp)
 set_target_properties(${PROJECT_NAME}_gddp_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_gddp)
 set_target_properties(${PROJECT_NAME}_gdsp_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME}_gdsp)
