--- a/src/mobbrmsd/test/3ddp/CMakeLists.txt
+++ b/src/mobbrmsd/test/3ddp/CMakeLists.txt
@@ -1,1 +1,1 @@
-DIMSPECTESTS(3ddp ${CMAKE_CURRENT_SOURCE_DIR}/../../mobbrmsd_3d 64 32)
+DIMSPECTESTS(3ddp ${CMAKE_CURRENT_SOURCE_DIR}/../../mobbrmsd_3d 3 64 32)
