--- a/src/mobbrmsd/test/3dsp/CMakeLists.txt
+++ b/src/mobbrmsd/test/3dsp/CMakeLists.txt
@@ -1,1 +1,1 @@
-DIMSPECTESTS(3dsp ${CMAKE_CURRENT_SOURCE_DIR}/../../mobbrmsd_3d 32 32)
+DIMSPECTESTS(3dsp ${CMAKE_CURRENT_SOURCE_DIR}/../../mobbrmsd_3d 3 32 32)
