--- a/src/mobbrmsd/test/2dsp/CMakeLists.txt
+++ b/src/mobbrmsd/test/2dsp/CMakeLists.txt
@@ -1,1 +1,1 @@
-DIMSPECTESTS(2dsp ${CMAKE_CURRENT_SOURCE_DIR}/../../mobbrmsd_2d 32 32)
+DIMSPECTESTS(2dsp ${CMAKE_CURRENT_SOURCE_DIR}/../../mobbrmsd_2d 2 32 32)
