[update] rename gd -> xd

--- a/src/mobbrmsd/test/CMakeLists.txt
+++ b/src/mobbrmsd/test/CMakeLists.txt
@@ -95,5 +95,5 @@ add_subdirectory(2dsp)
 add_subdirectory(2ddp)
 add_subdirectory(3dsp)
 add_subdirectory(3ddp)
-add_subdirectory(gdsp)
-add_subdirectory(gddp)
+add_subdirectory(xdsp)
+add_subdirectory(xddp)
