--- a/src/python_interface/CMakeLists.txt
+++ b/src/python_interface/CMakeLists.txt
@@ -81,8 +81,8 @@ if(SKBUILD)
     )
   endfunction(FYPP_BUILD)
 
-  FYPP_BUILD(gd dp)
-  FYPP_BUILD(gd sp)
+  FYPP_BUILD(xd dp)
+  FYPP_BUILD(xd sp)
   FYPP_BUILD(2d dp)
   FYPP_BUILD(2d sp)
   FYPP_BUILD(3d dp)
