[update] python_driver.f90

--- a/src/python_interface/CMakeLists.txt
+++ b/src/python_interface/CMakeLists.txt
@@ -1,6 +1,6 @@
-if(SKBUILD)
-  find_package(F2PY REQUIRED)
+#if(SKBUILD)
   find_package(Python 3.8 REQUIRED COMPONENTS NumPy)
+  find_package(F2PY REQUIRED)
 
   if (NOT CMAKE_INSTALL_PYTHON_LIBDIR)
     execute_process(
@@ -104,7 +104,7 @@ if(SKBUILD)
     DESTINATION
     "${CMAKE_INSTALL_PYTHON_LIBDIR}/mobbrmsd"
     )
-endif()
+#endif()
 
 if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   ADDTEST(test_driver 3 64 32 1 1 ""
