--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools", "wheel", "scikit-build", "fypp", "cmake>=3.9", "numpy>=1.21"]
+requires = ["setuptools==59.8", "scikit-build", "networkx", "tqdm", "fypp", "cmake>=3.18", "numpy<=2.1.1"]
 build-backend = "setuptools.build_meta"
